--- a/header.html
+++ b/header.html
@@ -10,12 +10,10 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbars-rs-food">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <ul class="navbar-nav ml-auto" id="header">
         </ul>
       </div>
     </div>
   </nav>
 </header>
+<!-- <script src="header.js"></script> -->
