--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <header class="top-navbar">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand">
         <img src="images/logo.png" alt="" />
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-rs-food"
@@ -16,4 +16,3 @@
     </div>
   </nav>
 </header>
-<!-- <script src="header.js"></script> -->
