--- a/index.html
+++ b/index.html
@@ -15,90 +15,53 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
 	<link rel="stylesheet" href="css/custom.css">
-
 </head>
-
-
 <body>
+	<script src="index.js"></script>
 	<div id="header-container"></div>
-	<div id="slides" class="cover-slides">
-		<ul class="slides-container" id="slides-container">
-			<li class="text-center">
-				<img src="images/slider-01.jpg" alt="">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<h1 class="m-b-20" id="welcome-1">
-						</div>
-					</div>
-				</div>
-			</li>
-			<li class="text-center">
-				<img src="images/slider-02.jpg" alt="">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<h1 class="m-b-20" id="welcome-2">
-						</div>
-					</div>
-				</div>
-			</li>
-			<li class="text-center">
-				<img src="images/slider-03.jpg" alt="">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<h1 class="m-b-20" id="welcome-3">
-						</div>
-					</div>
-				</div>
-			</li>
-		</ul>
-		<div class="slides-navigation">
-			<a href="#" class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-			<a href="#" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-		</div>
-	</div>
-	<div class="about-section-box">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12">
-					<img src="images/about-img.jpg" alt="" class="img-fluid">
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12 text-center">
-					<div class="inner-column">
-						<h1>Chào mừng quý khách đến với <span>Yamifood</span></h1>
-						<h4>Về chúng tôi</h4>
-						<p>Yamifood không chỉ là một trải nghiệm ẩm thực, mà còn là 1 kỷ niệm về những hương vị chân
-							thực của Việt Nam.</p>
-						<p>Được thành lập bởi A và B, quán ăn nhỏ của chúng tôi là sự tôn vinh những truyền thống ẩm
-							thực phong phú của Việt Nam.
-							Từ những tô phở hấp dẫn đến những chiếc bánh mì phô mai giòn tan, mỗi món ăn đều được chế
-							biến với tình yêu và sự tỉ mỉ.
-							Hãy đến và trải nghiệm không gian ấm áp như những bữa ăn như tại nhà.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="qt-box qt-background">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 ml-auto mr-auto text-left" id="feedback">
-					<p class="lead ">
-						" Đồ ăn ngon là nền tảng của hạnh phúc thật sự "
-					</p>
-					<span class="lead">Auguste Escoffier</span>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="menu-item-container"></div>
-	<div id="feedback-container"></div>
+  <div id="slides" class="cover-slides">
+    <ul class="slides-container">
+      <li class="text-center">
+        <img src="images/slider-01.jpg" alt="">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="m-b-20" id="welcome-1">
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="text-center">
+        <img src="images/slider-02.jpg" alt="">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="m-b-20" id="welcome-2">
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="text-center">
+        <img src="images/slider-03.jpg" alt="">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="m-b-20" id="welcome-3">
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <div class="slides-navigation">
+      <a href="#" class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <a href="#" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    </div>
+  </div>
+	<div id="main-container"></div>
+  <div id="menu-container"></div>
+  <div id="contact-container"></div>
 	<div id="footer-container"></div>
 	<a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
-
-
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
@@ -110,7 +73,6 @@
 	<script src="js/form-validator.min.js"></script>
 	<script src="js/contact-form-script.js"></script>
 	<script src="js/custom.js"></script>
-	<script src="index.js"></script>
 </body>
 
 </html>
